@@ -6,13 +6,13 @@ bugs:
  * optional "advanced" encoder settings
  * give time estimates for progress bar
  * HIG compliant interface
- * progress dialog ?
  * autotools, l12n
  * handle exceptions even when they happen in callbacks
  * add support for GNOME encoding profiles ?
 
  * bug: the program's options aren't printed with --help
 
+ -ok- progress dialog
  -ok- find a solution when no tags & filename generated from tags
  -ok- don't add dupplicate files 
  -ok- dropping a list a folder does not work as expected
